plugin running, wrong events conversion and not sending to LA